<resources>
    <string name="app_name">JetCinema</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="person">Person</string>
    <string name="movie">Movie</string>
    <string name="movies">Movies</string>
    <string name="collections">Collections</string>
    <string name="profile">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="filter">Filter</string>
    <string name="posts">Posts</string>
</resources>