...
    modifier: Modifier,
    filmVip: FilmVip,
    viewModel: FilterViewModel = hiltViewModel(),
    onBackClick: (FilmVip) -> Unit,
    onSelectYear: (FilmVip) -> Unit,
) {
    val type = listOf("ALL", "FILM", "TV_SERIES")
    val order = listOf("YEAR", "NUM_VOTE", "RATING")
    LaunchedEffect(key1 = true) {
        Log.i("searchFilter", "start screen filter $filmVip ")
        viewModel.setFilter(filmVip)
    }

...
